--- a/solana/Cargo.toml
+++ b/solana/Cargo.toml
@@ -18,6 +18,7 @@ hashsigs-rs = { path = ".." }
 borsh = "1.5"
 bytemuck = "1.13"
 bytemuck_derive = "1.10.1"  # Updated to satisfy Solana 2.3
+solana-system-interface = "1.0"
 
 [dev-dependencies]
 solana-program-test = "2.3"
